# dashly

./: .gitignore  ERROR_HANDLING_IMPLEMENTATION_SUMMARY.md  OPTIMIZATION_SUMMARY.md  README.md  SECURITY_FIXES_SUMMARY.md  demonstrate_schema_context.py  project-brief.md  test_llm_data_privacy.py  test_llm_integration.py
backend/: .env.development  .env.example  PERFORMANCE_OPTIMIZATIONS.md  SECURITY.md  SECURITY_FIXES.md  demo_enhanced_llm.py  generate_secure_config.py  pyproject.toml  requirements.txt  test_performance_integration.py  validate_config.py
backend/data/: demo.duckdb  demo.duckdb.wal  demo_sales.csv  sales.csv  sales_data.csv
backend/src/: auth.py  chart_recommendation_service.py  chat_error_handler.py  chat_service.py  config_demo.py  conversation_history_manager.py  database_manager.py  error_handlers.py  exceptions.py  file_upload_handler.py  input_sanitizer.py  insight_analyzer.py  insight_analyzer_demo.py  llm_rate_limiter.py  llm_service.py  logging_config.py  main.py  models.py  performance_monitor.py  proactive_exploration_demo.py  proactive_exploration_service.py  query_executor.py  query_explain_service.py  rate_limiter.py  response_cache.py  response_generator.py  schema_service.py  security_config.py  security_fixes_test_script.py  sql_execution_config.py  sql_validator.py  streaming_response.py  test_integration.py  test_security.py
backend/tests/: CHAT_TESTING_SUMMARY.md  test_automatic_dashboard_integration.py  test_chart_recommendation_service.py  test_chat_end_to_end_integration.py  test_chat_error_handling.py  test_coverage_report.py  (+47 more)
(+165 files in other folders)
