[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dashly-backend"
version = "0.1.0"
description = "Backend API for Dashly dashboard auto-designer"
authors = [{name = "Dashly Team"}]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "duckdb>=0.9.0",
    "pandas>=2.1.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.0",
    "openai>=1.3.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"